--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
             <ul class="list">
                <li><a href="index.html">Home</a></li>
                <li><a href="about.html">About Us</a></li>
-               <li><a href="https://mail.google.com/mail/">Help</a></li>
                <li><a href="#more">More</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="bg">
-       <p>Photo Mania</p>
+       <p>Photo Menia</p>
     </div>
     
     <section class="main1" >
